crates/gridwell-writer-xlsx/tests/snapshots/snapshots__mixed-markup.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Message</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">Status: degraded
Retry advised†</t></is></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t xml:space="preserve">† See runbook section 4.</t></is></c></row>
</sheetData>
</worksheet>
