crates/gridwell-writer-xlsx/tests/snapshots/snapshots__numeric-right-align.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Product</t></is></c><c r="B1" t="inlineStr" s="2"><is><t xml:space="preserve">Qty</t></is></c><c r="C1" t="inlineStr" s="2"><is><t xml:space="preserve">Price</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">Widget</t></is></c><c r="B2" s="3"><v>12</v></c><c r="C2" s="3"><v>3.5</v></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t xml:space="preserve">Gadget</t></is></c><c r="B3" s="3"><v>4</v></c><c r="C3" s="3"><v>19.99</v></c></row>
</sheetData>
</worksheet>
