crates/gridwell-writer-xlsx/tests/snapshots/snapshots__per-column-align.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/><col min="4" max="4" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">L</t></is></c><c r="B1" t="inlineStr" s="2"><is><t xml:space="preserve">C</t></is></c><c r="C1" t="inlineStr" s="3"><is><t xml:space="preserve">R</t></is></c><c r="D1" t="inlineStr" s="4"><is><t xml:space="preserve">J</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">left</t></is></c><c r="B2" t="inlineStr" s="5"><is><t xml:space="preserve">center</t></is></c><c r="C2" t="inlineStr" s="6"><is><t xml:space="preserve">right</t></is></c><c r="D2" t="inlineStr" s="7"><is><t xml:space="preserve">justified text here</t></is></c></row>
</sheetData>
</worksheet>
