crates/gridwell-writer-xlsx/tests/snapshots/snapshots__raw-html.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Kind</t></is></c><c r="B1" t="inlineStr" s="1"><is><t xml:space="preserve">Rendered</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">bold+italic</t></is></c></row>
</sheetData>
</worksheet>
