crates/gridwell-writer-xlsx/tests/snapshots/snapshots__regional-sales.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/><col min="4" max="4" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Regional Sales Performance</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">Fiscal years 2023–2024 (in millions USD)</t></is></c></row>
<row r="3"><c r="A3" s="1"/><c r="B3" s="2"/><c r="C3" t="inlineStr" s="2"><is><t xml:space="preserve">Financials</t></is></c></row>
<row r="4"><c r="A4" t="inlineStr" s="1"><is><t xml:space="preserve">Country</t></is></c><c r="B4" t="inlineStr" s="2"><is><t xml:space="preserve">Year</t></is></c><c r="C4" t="inlineStr" s="2"><is><t xml:space="preserve">Revenue</t></is></c><c r="D4" t="inlineStr" s="2"><is><t xml:space="preserve">Profit</t></is></c></row>
<row r="5"><c r="A5" t="inlineStr" s="1"><is><t xml:space="preserve">North America</t></is></c></row>
<row r="6"><c r="A6" t="inlineStr"><is><t xml:space="preserve">United States</t></is></c><c r="B6" t="inlineStr" s="3"><is><t xml:space="preserve">2023</t></is></c><c r="C6" t="inlineStr" s="3"><is><t xml:space="preserve">1,250.3</t></is></c><c r="D6" t="inlineStr" s="3"><is><t xml:space="preserve">270.11</t></is></c></row>
<row r="7"><c r="B7" t="inlineStr" s="3"><is><t xml:space="preserve">2024</t></is></c><c r="C7" t="inlineStr" s="3"><is><t xml:space="preserve">1,380.7</t></is></c><c r="D7" t="inlineStr" s="3"><is><t xml:space="preserve">330.3</t></is></c></row>
<row r="8"><c r="A8" t="inlineStr"><is><t xml:space="preserve">Canada</t></is></c><c r="B8" t="inlineStr" s="3"><is><t xml:space="preserve">2024</t></is></c><c r="C8" t="inlineStr" s="3"><is><t xml:space="preserve">420.1</t></is></c><c r="D8" t="inlineStr" s="3"><is><t xml:space="preserve">109.5</t></is></c></row>
<row r="9"><c r="A9" t="inlineStr" s="1"><is><t xml:space="preserve">Europe</t></is></c></row>
<row r="10"><c r="A10" t="inlineStr"><is><t xml:space="preserve">Germany</t></is></c><c r="B10" t="inlineStr" s="3"><is><t xml:space="preserve">2024</t></is></c><c r="C10" t="inlineStr" s="3"><is><t xml:space="preserve">945.2</t></is></c><c r="D10" t="inlineStr" s="3"><is><t xml:space="preserve">164.9</t></is></c></row>
<row r="11"><c r="A11" t="inlineStr"><is><t xml:space="preserve">France</t></is></c><c r="B11" t="inlineStr" s="3"><is><t xml:space="preserve">2024</t></is></c><c r="C11" t="inlineStr" s="3"><is><t xml:space="preserve">610.8</t></is></c><c r="D11" t="inlineStr" s="3"><is><t xml:space="preserve">120.6</t></is></c></row>
<row r="13"><c r="A13" t="inlineStr"><is><t xml:space="preserve">1 Includes one-time restructuring charge.</t></is></c></row>
<row r="15"><c r="A15" t="inlineStr"><is><t xml:space="preserve">Source: Internal finance database, June 2026.</t></is></c></row>
</sheetData>
<mergeCells count="4"><mergeCell ref="C3:D3"/><mergeCell ref="A5:D5"/><mergeCell ref="A6:A7"/><mergeCell ref="A9:D9"/></mergeCells>
</worksheet>
